--- a/src/GreenFrog/Bundle/TodoBundle/Resources/views/Default/index.html.twig
+++ b/src/GreenFrog/Bundle/TodoBundle/Resources/views/Default/index.html.twig
@@ -6,9 +6,14 @@ Home - Todo App
 {% endblock %}
 
 {% block javascripts %}
-<script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-<script type="text/javascript" src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
-<script type="text/javascript" src="{{ asset('bundles/greenfrogtodo/js/jquery.editable-1.3.3.js') }}"></script>
+    {% javascripts
+        '@FOSJsRoutingBundle/Resources/public/js/router.js'
+        '@GreenFrogTodoBundle/Resources/public/js/jquery.editable-1.3.3.js'
+        output='js/admin.js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+    <script type="text/javascript" src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
 {% endblock %}
 
 {# All flashs type #}
